# papa2

./: .gitignore  404.html  DEV_SETUP.md  Dockerfile  MANIFEST.in  Makefile  README.md  configure  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: ci.yml  container.yml  docs.yml
api/: index.html
benchmarks/: BENCHMARKS.md  README.md  generate_fastq_case.py  matrix.py  monitor_command.py  plot_results.py  run_python_case.py  run_r_case.R  run_suite.py
bigdata/: index.html
conda/: meta.yaml
docs/: api.md  bigdata.md  index.md  quickstart.md  tutorial.md
docs/scripts/: bigdata.py  quickstart.py  tutorial.py
papa2/: __init__.py  _cdada.py  chimera.py  cli.py  dada.py  error.py  filter.py  io.py  paired.py  taxonomy.py  utils.py
quickstart/: index.html
search/: search_index.json
src/: chimera_capi.cpp  cluster.cpp  containers.cpp  dada.h  dada2_capi.cpp  dada2_capi.h  derep.c  error.cpp  kmers.cpp  loess.c  misc.cpp  nwalign_endsfree.cpp  nwalign_vectorized.cpp  paired_capi.cpp  pval.cpp  taxonomy_capi.cpp
tests/: compare_with_r.py  r_reference.R  test_loess_errfun_regression.py  test_standalone_dada_consistency.py  test_streaming_file_input.py  test_utils_regressions.py
tutorial/: index.html
