[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "papa2"
version = "0.1.0"
description = "Python-first amplicon denoising derived from the standalone DADA2 port"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "R. Eric Collins" }
]
dependencies = [
  "numpy"
]

[tool.setuptools]
packages = ["papa2"]
